# SLIPT

./: .gitignore  .gitmodules
SLIPT_Rx/: CMakeLists.txt  README.md  sdkconfig
SLIPT_Rx/boards/apollo3p_evb/slipt/: Makefile
SLIPT_Rx/boards/apollo3p_evb/slipt/components/S1/: CMakeLists.txt  s1.h
SLIPT_Rx/boards/apollo3p_evb/slipt/components/S2/: CMakeLists.txt  s2.c  s2.h
SLIPT_Rx/boards/apollo3p_evb/slipt/gcc/: Makefile
SLIPT_Rx/boards/apollo3p_evb/slipt/src/: FreeRTOSConfig.h  main.c  rtos.c
SLIPT_Rx/boards/apollo3p_evb/slipt/src/setup/: setup.c  setup.h
SLIPT_Rx/components/S1/: CMakeLists.txt  s1.c  s1.h
SLIPT_Rx/components/S2/: CMakeLists.txt  s2.c  s2.h
SLIPT_Rx/devices/: am_devices.h
SLIPT_Rx/main/: CMakeLists.txt  main.c
SLIPT_Tx/: CMakeLists.txt  README.md  sdkconfig
SLIPT_Tx/main/: main.c
